--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "Odin-Projects-css-exercises"]
-	path = Odin-Projects-css-exercises
-	url = git@github.com:lethuptit/Odin-Projects-css-exercises.git
+[submodule "css-exercises"]
+	path = css-exercises
+	url = git@github.com:lethuptit/css-exercises.git
